[package]
authors = ["Alex Vlasov <alex.m.vlasov@gmail.com>"]
description = "Demo how to make zkSNARKs for Edcon 2019"
license = "MIT/Apache-2.0"
name = "edcon_demo"
version = "0.0.1"
edition = "2018"

[lib]
name = "demo"
path = "src/lib.rs"

[dependencies]
rand = "0.4"
hex = "0.3.2"
time = "0.1"
num-bigint = "0.2"
rust-crypto = "0.2"

#ff = { git = 'https://github.com/matterinc/ff', features = ["derive"] }
#pairing = { git = 'https://github.com/matterinc/pairing' }
sapling-crypto = { git = 'https://github.com/matterinc/sapling-crypto', tag = "0.0.4" }
bellman = { git = 'https://github.com/matterinc/bellman', tag = "0.2.0"  }


